--- a/ODExplorer/ControlStyles/SecondaryWindowStyles.xaml
+++ b/ODExplorer/ControlStyles/SecondaryWindowStyles.xaml
@@ -56,6 +56,23 @@
                 Value="0,0,0,10" />
     </Style>
 
+
+    <Style x:Key="SecondaryWindowDataGridHeaderStyleCenter"
+           TargetType="{x:Type DataGridColumnHeader}">
+        <Setter Property="Background"
+                Value="Transparent" />
+        <Setter Property="Foreground"
+                Value="{DynamicResource SecondaryWindowColumnHeadForeground}" />
+        <Setter Property="FontSize"
+                Value="20" />
+        <Setter Property="SnapsToDevicePixels"
+                Value="True" />
+        <Setter Property="Margin"
+                Value="0,0,0,10" />
+        <Setter Property="HorizontalContentAlignment"
+                Value="Center" />
+    </Style>
+    
     <Style x:Key="SecondaryWindowDeleteButton"
            TargetType="Button">
         <Setter Property="Foreground"
