--- a/ODExplorer/GeologicalData/ScannedGeoView.xaml
+++ b/ODExplorer/GeologicalData/ScannedGeoView.xaml
@@ -13,7 +13,8 @@
         Title="OD EXPLORER - GEOLOGICAL DATA"
         Height="600"
         Width="980"
-        WindowStyle="None"
+        WindowStyle="SingleBorderWindow"        
+        WindowStartupLocation="CenterOwner"
         StateChanged="MainWindowStateChangeRaised"
         Background="{DynamicResource SecondaryWindowBackground}"
         ShowInTaskbar="{Binding Source={StaticResource AppSettings}, Path=SettingsInstance.Value.ShowAdditionalWindowsInTaskBar}"
