--- a/ODExplorer/OrganicData/BioDataView.xaml
+++ b/ODExplorer/OrganicData/BioDataView.xaml
@@ -12,7 +12,9 @@
         Background="{DynamicResource SecondaryWindowBackground}"
         Foreground="{DynamicResource SecondaryWindowForeground}"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
-        Title="OD EXPLORER - BIOLOGICAL DATA"
+        Title="OD EXPLORER - BIOLOGICAL DATA"    
+        WindowStyle="SingleBorderWindow" 
+        WindowStartupLocation="CenterOwner"
         Height="600"
         Width="980"
         StateChanged="MainWindowStateChangeRaised"
