--- a/ODExplorer/AboutBox/AboutBox.xaml
+++ b/ODExplorer/AboutBox/AboutBox.xaml
@@ -515,14 +515,29 @@
                     </TextBlock>
                 </StackPanel>
 
-                <Button Content="OK"
-                        Grid.Column="3"
-                        Grid.Row="6"
+                <StackPanel Orientation="Horizontal"
+                            HorizontalAlignment="Right"
+                            Grid.Column="3"
+                            Grid.Row="6">
+
+                    <Button Height="20" Width="70"
+                            Margin="0,0,15,0"
+                            x:Name="PayPalDonateButton"
+                            Click="PayPalDonateButton_Click">
+                        <Button.Template>
+                            <ControlTemplate>
+                                <Image Source="/Images/btn_donate_LG.png"/>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+ 
+                    <Button Content="OK"              
                         Width="80"
                         Height="20"
                         VerticalAlignment="Bottom"
                         HorizontalAlignment="Right"
                         Command="{x:Static SystemCommands.CloseWindowCommand}" />
+                </StackPanel>
             </Grid>
         </Grid>
     </Border>
